terminar os metodos da formmiga

--- a/src/makefile
+++ b/src/makefile
@@ -2,12 +2,12 @@ CC = g++
 DB = gdb
 CFLAGS = -O2 -std=c++11 -Wall -Wextra
 VFLAGS = valgrind -v --track-origins=yes --leak-check=full --show-leak-kinds=all
-SOURCE = main.cpp data.cpp
+SOURCE = main.cpp data.cpp ant.cpp
 EXEC = exec
 ANTS = 0
 U_MODIFIER = 0.01
 P_MODIFIER = 1000
-DECAY = 0.2
+DECAY = 0.8
 
 all: FORCE
 	$(CC) $(CFLAGS) $(SOURCE) -o $(EXEC)
