sorteio de caminho OK

--- a/src/makefile
+++ b/src/makefile
@@ -8,11 +8,12 @@ ANTS = 0
 U_MODIFIER = 0.01
 P_MODIFIER = 1000
 DECAY = 0.8
+ITERATIONS = 100
 
 all: FORCE
 	$(CC) $(CFLAGS) $(SOURCE) -o $(EXEC)
 test:
-	./$(EXEC) ../data/SJC1.dat $(ANTS) $(U_MODIFIER) $(P_MODIFIER) $(DECAY)
+	./$(EXEC) ../data/SJC1.dat $(ANTS) $(U_MODIFIER) $(P_MODIFIER) $(DECAY) $(ITERATIONS)
 debug:
 	$(DB) ./$(EXEC)
 valgrind:
